Fix pipenv source
Didn't read the docs on this, was borking my whole system. Blog post will be written later.

--- a/Pipfile
+++ b/Pipfile
@@ -1,12 +1,12 @@
 [[source]]
-url = "https://github.com/SMNWTeam1982/reefscape2025"
-verify_ssl = false
-name = "reefscape2025"
+url = "https://pypi.org/simple"
+verify_ssl = true
+name = "pypi"
 
 [packages]
 robotpy = "*"
 wpilib = "*"
-revlib = "*"
+rev = "*"
 
 [dev-packages]
 
