--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ name = "pypi"
 robotpy = "*"
 wpilib = "*"
 rev = "*"
+revlib = "*"
+robotpy-rev = "*"
 
 [dev-packages]
 
@@ -16,3 +18,4 @@ python_version = "3.12"
 [scripts]
 sync = "python -m robotpy sync"
 deploy = "python -m robotpy deploy"
+sim = "python -m robotpy sim"
