--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,9 @@ robotpy_version = "2024.3.2.2"
 
 # Which extra RobotPy components should be installed
 # -> equivalent to `pip install robotpy[extra1, ...]
+## Use pipenv to install deps from here (pipenv run sync)
 robotpy_extras = [
-    # "all",
+    "all",
     # "apriltag",
     # "commands2",
     # "cscore",
